# python-playground-template

./: README.md  pyproject.toml
tests/: test_greet.py
