[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Niten Nashiki <n.nashiki.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.variables]
python_src_dir = "src tests"
flake_ignore = "E501,E203,W503,W504"

[tool.taskipy.tasks]
serve = "uvicorn apps.main:app --reload --host 0.0.0.0"
test = "pytest . -s"
test_debug = "python -m debugpy --wait-for-client --listen 5679 -m pytest . -s"

[tool.taskipy.tasks.fmt]
cmd = "task black && task isort && task flake8"
help = "format code"

[tool.taskipy.tasks.fmt_check]
cmd = "task black_check && task isort_check && task flake8"
help = "format code with check option"

[tool.taskipy.tasks.black]
cmd = "black {python_src_dir}"
use_vars = true

[tool.taskipy.tasks.black_check]
cmd = "black {python_src_dir} --check"
use_vars = true

[tool.taskipy.tasks.isort]
cmd = "isort {python_src_dir}"
use_vars = true

[tool.taskipy.tasks.isort_check]
cmd = "isort {python_src_dir} --check-only"
use_vars = true

[tool.taskipy.tasks.flake8]
cmd = "flake8 --ignore {flake_ignore} {python_src_dir}"
use_vars = true